--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,11 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header {
+  background-color: #512DA8; }
+  .modal-header .modal-title {
+    color: #FFFAF0; }
+
+.modal-body {
+  background-color: #D1C4E9; }
